# bedrock-mcp-streamlit

./: .gitignore  PROMPTS.py  README.md  README_ja.md  config.json  main.py  mcp_config.json  pyproject.toml  util.py
src/: main.py  prompts.py  trace.py  util.py
